Generate script action on button click

--- a/style/style.css
+++ b/style/style.css
@@ -1,4 +1,12 @@
+html,
+body,
+.container,
+.contributions {
+  height: 100%;
+}
+
 body {
+  width: 100%;
   margin: 0;
   color: rgba(255, 255, 255, 0.9);
   background-color: rgba(3, 3, 3, 0.8);
@@ -36,15 +44,22 @@ li.day {
 }
 
 .contributions-panel {
-  /*padding: 1rem 3rem;*/
   width: 100%;
-  box-shadow: 0 5px 10px 1px rgba(0,0,0,0.24);
+  box-shadow: 9px 5px 5px 5px rgba(0,0,0,0.24);
+  padding: 1rem 0;
 }
 
 .contributions {
   display: flex;
   flex-flow: column wrap;
   justify-content: center;
+}
+
+.script {
+  flex: 1 1 auto;
+  overflow-y: auto;
+  min-height: 0px;
+  width: 50%;
 }
 
 .contributions-footer {
@@ -185,10 +200,6 @@ li.day {
   height: 24px;
   padding: 0 1rem;
   text-transform: uppercase;
-}
-
-.reset {
-  margin-right: 5px;
 }
 
 .legend-block {
