--- a/style/style.css
+++ b/style/style.css
@@ -13,36 +13,6 @@ body {
   font-family: Roboto, sans-serif;
 }
 
-.title {
-  display: flex;
-  justify-content: center;
-}
-
-.content {
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
-}
-
-ul.days {
-  margin: 0;
-  padding: 0;
-  display: flex;
-  flex-flow: column nowrap;
-}
-
-li.day {
-  font-family: Verdana, Arial, Helvetica, sans-serif;
-  font-size: 8pt;
-  text-align: center;
-  width: 20px;
-  height: 10px;
-  margin: 1px;
-  padding: 0 10px;
-  list-style: none;
-  list-style-position: outside;
-}
-
 .contributions-panel {
   width: 100%;
   box-shadow: 9px 5px 5px 5px rgba(0,0,0,0.24);
@@ -55,13 +25,6 @@ li.day {
   justify-content: center;
 }
 
-.script {
-  flex: 1 1 auto;
-  overflow-y: auto;
-  min-height: 0px;
-  width: 50%;
-}
-
 .contributions-footer {
   display: flex;
   flex-flow: row nowrap;
@@ -70,23 +33,6 @@ li.day {
   font-size: 8pt;
   margin: 5px 0;
   line-height: 24px;
-}
-
-.contributions-legend {
-  display: flex;
-  align-items: center;
-}
-
-.contributions-legend .legend {
-  display: flex;
-  align-items: center;
-  list-style: none;
-  margin: 0 5px;
-  padding: 0;
-}
-
-.contributions-legend .legend li {
-  display: inline-block;
 }
 
 .row {
@@ -109,6 +55,7 @@ li.day {
   height: 15px;
   margin: 1px;
   background-color: #eee;
+  cursor: pointer;
 }
 
 .rectangle-2 {
@@ -127,13 +74,8 @@ li.day {
   background-color: #1e6823;
 }
 
-/* --- DELETE */
 .container-flex {
   display: flex;
-}
-
-.container-flex.row-wrap {
-  flex-flow: row wrap;
 }
 
 .container-flex.row-nowrap {
@@ -144,16 +86,8 @@ li.day {
   flex-flow: column nowrap;
 }
 
-.container-flex.column-wrap {
-  flex-flow: column wrap;
-}
-
 .container-flex.justify-center {
   justify-content: center;
-}
-
-.container-flex.justify-start {
-  justify-content: flex-start;
 }
 
 .container-flex.space-between {
@@ -162,26 +96,6 @@ li.day {
 
 .container-flex.align-center {
   align-items: center;
-}
-
-.green {
-  background-color: green;
-}
-
-.component-100 {
-  height: 100px;
-  width: 100px;
-}
-
-.component-50 {
-  height: 50px;
-  width: 50px;
-}
-
-.component-10 {
-  height: 10px;
-  width: 10px;
-  margin: 1px;
 }
 
 .contributions-header {
@@ -194,12 +108,6 @@ li.day {
 .day {
   font-family: Verdana, Arial, Helvetica, sans-serif;
   font-size: 8pt;
-}
-
-.button {
-  height: 24px;
-  padding: 0 1rem;
-  text-transform: uppercase;
 }
 
 .legend-block {
